--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-ga": "^3.3.0",
     "react-icons": "^4.2.0",
     "react-masonry-component": "^6.3.0",
+    "react-multi-carousel": "^2.8.2",
     "react-responsive": "^9.0.0-beta.3",
     "react-scroll": "^1.8.3",
     "react-slick": "^0.28.1",
