--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-scroll": "^1.8.3",
     "react-slick": "^0.28.1",
     "react-stickynode": "^4.0.0",
+    "swiper": "^8.4.4",
     "theme-ui": "^0.11.1"
   },
   "devDependencies": {
